# RDJ-Turntable

./: .dockerignore  .gitattributes  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  RDJ-Turntable.ioc  README.md  record-player-design-log.md
.claude/: settings.json
App/: app.c  app.cpp  app.h  trace.h
App/control/: arm_foc.cpp  arm_foc.h  as5048a.cpp  as5048a.h  foc.cpp  foc.h  mt6826s.cpp  mt6826s.h  platter_feedback.cpp  platter_feedback.hpp
App/diagnostics/: diagnostic_controller.cpp  diagnostic_controller.hpp  m2c_executor.cpp  m2c_executor.hpp
App/hmi/: assets.hpp  backlight_controller.cpp  backlight_controller.hpp  display_config.h  interaction_controller.cpp  interaction_controller.hpp  presenter.cpp  presenter.hpp  screenkey_demo.cpp  screenkey_demo.hpp  screens.c  screens.cpp  screens.h  st7735.c  st7735.cpp  st7735.h
App/platform/: board.h  board_temp.cpp  board_temp.h  button.hpp  debounced_button.hpp  gpio.hpp  nvm.cpp  nvm.h  system_adapters.cpp  system_adapters.hpp
App/turntable/: application_controller.cpp  application_controller.hpp  controller.cpp  controller.hpp  fixed_queue.hpp  interfaces.hpp  types.hpp
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  can.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c
cmake/stm32cubemx/: CMakeLists.txt
docs/: M0-cubemx-setup.md  M1-cubemx-setup.md  M2a-cubemx-setup.md  M2b-cubemx-setup.md  M2c-cubemx-setup.md  M2c-plan.md  M4-cubemx-setup.md  M5-cubemx-setup.md  mt6826s-calibration.md  turntable-state-machine.md
simulator/: README.md  main.cpp  simulation.cpp  simulation.hpp
simulator/scenarios/: homing-timeout.sim  nominal.sim  recoverable-fault.sim
tests/: CMakeLists.txt  Dockerfile  run-host-tests.sh  run-simulator.sh  test_main.cpp
tools/: generate_hmi_assets.py  hmi-assets.Dockerfile  pdfsearch.py
